<resources>
    <string name="about_text">Proudly brought to you by</string>
    <string name="about_visit_website"><u>Visit our website</u></string>
    <string name="action_about">About</string>
    <string name="action_add_to_schedule">Add to schedule</string>
    <string name="action_edit_note">Edit note</string>
    <string name="action_filter">Filter</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_remove_from_schedule">Remove from schedule</string>
    <string name="action_remove_note">Remove note</string>
    <string name="action_search">Search</string>
    <string name="action_settings">About</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_up">Sign up</string>
    <string name="app_name">Baby Logger</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="authentication_in_progress">Signing in…</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="day_label">Day %1$d</string>
    <string name="label_login">Log in</string>
    <string name="label_no_account_yet"><u>"Don't have an account yet?"</u></string>
    <string name="label_register">Sign up.</string>
    <string name="menu_item_info">Info (Auth Test)</string>
    <string name="menu_item_map">Map</string>
    <string name="menu_item_notes">Notes</string>
    <string name="menu_item_presentations">Presentations</string>
    <string name="menu_item_schedule">Schedule</string>
    <string name="menu_item_speakers">Speakers</string>
    <string name="menu_item_tagcloud">Tagcloud</string>
    <string name="menu_item_my_profile">My Profile</string>
    <string name="menu_item_nearby_events">Events Nearby</string>
    <string name="menu_item_my_events">My Events</string>
    <string name="menu_item_messages">Private Messages</string>
    <string name="menu_item_board">Message Boards</string>
    <string name="menu_item_about">About</string>
    <string name="filter_item_classes">Classes</string>
    <string name="filter_item_comedy">Comedy</string>
    <string name="filter_item_performing_arts">Performing Arts</string>
    <string name="filter_item_conferences">Conferences</string>
    <string name="filter_item_other_events">Other Events</string>
    <string name="filter_item_other_entertainment">Other Entertainment</string>
    <string name="filter_item_social">Social Events</string>
    <string name="filter_item_food">Food/Wine</string>
    <string name="filter_item_networking">Networking</string>
    <string name="filter_item_music">Music</string>
    <string name="filter_item_business">Business</string>
    <string name="filter_item_fundraisers">Fundraisers</string>
    <string name="filter_item_festivals">Festivals</string>
    <string name="filter_item_religion">Religion</string>
    <string name="filter_item_sports">Sports</string>
    <string name="filter_item_movies">Movies</string>
    <string name="filter_item_endurance">Endurance</string>
    <string name="filter_item_travel">Travel</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="only_noted_label">Only noted</string>
    <string name="only_scheduled_label">Only scheduled</string>
    <string name="presentation_finished">Ended</string>
    <string name="presentation_header_time">Day <g id="day">%1$d</g> | <g id="date">%2$s</g></string>
    <string name="presentation_live">NOW LIVE <g id="date">%1$s</g> remaining</string>
    <string name="presentation_live_substring">NOW LIVE</string>
    <string name="presentation_speakers">Speakers</string>
    <string name="presentation_time">Day <g id="day">%1$d</g> | <g id="date">%2$s</g></string>
    <string name="presentation_time_no_day"><g id="date">%2$s</g></string>
    <string name="presentation_topics">Topics</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="remaining_time_format_h_mm"><g id="hours">%1$d</g>:<g id="minutes">%2$02d</g></string>
    <string name="remind_log_in_message">Signing up and/or logging in allows you to store your schedule in the cloud and sync it across your devices and on the web.</string>
    <string name="search_hint">Search sessions</string>
    <string name="session_notification_in_room">In <g id="room_name">%1$s</g></string>
    <string name="session_notification_text_1">starting in <g id="remaining_time">%1$d</g> min.</string>
    <string name="settings_about_version">Version <g id="version">%1$s</g></string>
    <string name="settings_account">Account</string>
    <string name="settings_account_not_signed_in">Not signed in</string>
    <string name="settings_account_signed_in_as">Signed in as <g id="email">%1$s</g></string>
    <string name="settings_debug">Debug</string>
    <string name="settings_debug_date">Date</string>
    <string name="settings_debug_time">Time</string>
    <string name="settings_debug_use_mock_time">Use mock date</string>
    <string name="settings_debug_use_mock_time_off">Not using mock date</string>
    <string name="settings_debug_use_mock_time_on">Using mock date</string>
    <string name="settings_devoxx_account">Devoxx account</string>
    <string name="settings_event">Event</string>
    <string name="settings_event_no_event_selected">No event selected</string>
    <string name="settings_general">General settings</string>
    <string name="settings_greet_notifications">Greet Notifications</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_connected_networks">Connected Networks</string>
    <string name="settings_content_privacy">How Others See Your Content</string>
    <string name="settings_about">About Greet</string>
    <string name="messaging_preferences_title">Messaging Preferences</string>
    <string name="messaging_preferences_summary">See who can see your messages</string>
    <string name="photo_preferences_title">Photo Preferences</string>
    <string name="photo_preferences_summary">See who can see your pictures</string>
    <string name="profile_preferences_title">Profile Preferences</string>
    <string name="profile_preferences_summary">See who can see your profile</string>
    <string name="settings_miscellaneous">Miscellaneous</string>
    <string name="settings_build_version">Build Version</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms">Terms and Conditions</string>
    <string name="settings_reminders">Reminders</string>
    <string name="settings_reminders_10mins">10 minutes</string>
    <string name="settings_reminders_15mins">15 minutes</string>
    <string name="settings_reminders_30mins">Half an hour</string>
    <string name="settings_reminders_5mins">5 minutes</string>
    <string name="settings_reminders_60mins">An hour</string>
    <string name="settings_reminders_never">Never</string>
    <string name="snooze_x_min">Snooze <g id="remaining_time">%1$d</g> min.</string>
    <string name="speaker_presentations">Presentations</string>
    <string name="time_and_room"><g id="date">%1$s</g> | <g id="room">%2$s</g></string>
    <string name="title_about">About</string>
    <string name="title_edit_note">Edit note</string>
    <string name="title_login">Login</string>
    <string name="title_presentation_detail">Presentation info</string>
    <string name="title_presentations">Presentations</string>
    <string name="title_search">Search</string>
    <string name="title_search_query">Search for \"&lt;b><g id="query">%1$s</g>&lt;b>\"</string>
    <string name="title_settings">Settings</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_speaker_detail">Speaker info</string>
    <string name="track_and_type"><g id="track">%1$s</g> | <g id="type">%2$s</g></string>
    <string name="track_and_type_and_room"><g id="track">%1$s</g> | <g id="type">%2$s</g> | <g id="type">%3$s</g></string>
    <string name="hours">Hours</string>
    <string name="txt_save">Save</string>
    <string name="action_stats">Statistics</string>
    <string name="gallery_string_title">Choose from Gallery</string>
    <string name="camera_string_title">CAMERA</string>
    <string name="picture_select_header_text">SELECT PICTURE FROM</string>
    <string name="diaper_change_statistics">Diaper Change Statistics</string>
    <string name="diaper_change_stats_title_day">Day</string>
    <string name="diaper_change_stats_title_week">Week</string>
    <string name="diaper_change_stats_title_month">Month</string>
    <string name="feed_statistics">Feed Statistics</string>
    <string name="feed_stats_type_bottle_title">Bottle</string>
    <string name="feed_stats_type_breast_title">Breast</string>
    <string name="export_header">Export</string>
    <string name="date_range_start">Date Range Start</string>
    <string name="date_range_end">Date Range End</string>
    <string name="choose_activities">Choose Things to export</string>
    <string name="export">Export</string>
    <string name="sleep_header">Track Sleep</string>
    <string name="sleep_start_time">Sleep Start Time: </string>
    <string name="sleep_end_time">Sleep End Time: </string>
    <string name="sleep_duration">Sleep Duration: </string>
    <string name="minutes">Minutes</string>
    <string name="action_edit">EDIT</string>
</resources>