<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_greet_notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="enableNotifications"
            android:title="@string/settings_notification">
        </SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_connected_networks">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enableLinkedIn"
            android:title="LinkedIn">
        </SwitchPreference>
        <SwitchPreference
            android:defaultValue="false"
            android:key="enableFacebook"
            android:title="Facebook">
        </SwitchPreference>
        <SwitchPreference
            android:defaultValue="false"
            android:key="enableGoogle"
            android:title="Google+">
        </SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_content_privacy">
        <PreferenceScreen
            android:key="messaging_preferences"
            android:title="@string/messaging_preferences_title"
            android:summary="@string/messaging_preferences_summary">
        </PreferenceScreen>
        <PreferenceScreen
            android:key="photo_preferences"
            android:title="@string/photo_preferences_title"
            android:summary="@string/photo_preferences_summary">
        </PreferenceScreen>
        <PreferenceScreen
            android:key="profile_preferences"
            android:title="@string/profile_preferences_title"
            android:summary="@string/profile_preferences_summary">
        </PreferenceScreen>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_miscellaneous">
        <PreferenceScreen
            android:title="About">
            <PreferenceCategory android:title="@string/settings_about">
                <PreferenceScreen android:title="@string/settings_build_version" android:summary="1.0.0">

                </PreferenceScreen>
                <PreferenceScreen android:title="@string/settings_privacy_policy">

                </PreferenceScreen>
                <PreferenceScreen android:title="@string/settings_terms">

                </PreferenceScreen>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
