<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/menu_item_my_profile"
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_profile"
        apps:showAsAction="ifRoom" />
    <item
        android:title="@string/action_stats"
        android:id="@+id/action_stats"
        android:orderInCategory="100"
        android:icon="@drawable/ic_stat_action"
        apps:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        apps:showAsAction="never" />
    <item
        android:id="@+id/action_licenses"
        android:orderInCategory="400"
        android:title="@string/action_licenses"
        apps:showAsAction="never" />
</menu>
