<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_delete_white_48dp"
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="DELETE"
        apps:showAsAction="ifRoom" />
    <item
        android:title="@string/action_edit"
        android:icon="@drawable/ic_save_white_48dp"
        android:id="@+id/action_add"
        android:orderInCategory="100"
        apps:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        apps:showAsAction="never" />
    <item
        android:id="@+id/action_licenses"
        android:orderInCategory="400"
        android:title="@string/action_licenses"
        apps:showAsAction="never" />
</menu>
