<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/sleep_header"
        android:id="@+id/sleep_header"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/ListItemDivider"
        android:layout_below="@+id/sleep_header"
        android:layout_marginTop="2dp"
        android:id="@+id/sleep_header_divider"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sleep_start_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/sleep_header_divider">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_start_time"
            android:textColor="@color/primary_dark"
            android:textSize="18sp"
            android:id="@+id/date_range_start_label"
            android:textAllCaps="false"/>


        <include layout = "@layout/view_time_blue_small"
            android:id="@+id/sleep_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >

        </include>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_range_end_layout"
        android:layout_margin="5dp"
        android:layout_below="@+id/sleep_start_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_end_time"
            android:textColor="@color/primary_dark"
            android:textSize="18sp"
            android:id="@+id/date_range_end_label"
            android:textAllCaps="false"/>


        <include layout = "@layout/view_time_blue_small"
            android:id="@+id/sleep_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >

        </include>



    </RelativeLayout>



    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_save"
        android:background="#1E88E5"
        android:layout_alignParentBottom="true"
        />




</RelativeLayout>
