<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true">


    <fragment
        android:name="com.rorlig.babylog.ui.widget.DateTimeHeaderFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sleep_header"
        android:id="@+id/sleep_header"
        android:textColor="@color/primary_gray_dark"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/header"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/ListItemDivider.Gray"
        android:layout_below="@+id/sleep_header"
        android:layout_marginTop="2dp"
        android:id="@+id/sleep_header_divider"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sleep_start_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/sleep_header_divider">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_duration"
            android:textColor="@color/primary_gray_dark"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:id="@+id/date_range_start_label"
            android:textAllCaps="false"/>





    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_range_end_layout"
        android:layout_margin="5dp"
        android:layout_below="@+id/sleep_start_layout">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/sleep_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight = "15dp"
            android:layout_marginLeft = "15dp"
            android:maxLength="2"
            android:ems="10"
            android:hint="@string/hours"
            app:met_floatingLabel="normal"
            android:numeric="decimal"
            android:layout_weight="1"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/sleep_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight = "15dp"
            android:layout_marginLeft = "15dp"
            android:maxLength="2"
            android:ems="10"
            android:hint="@string/minutes"
            android:layout_toRightOf="@+id/sleep_hours"
            app:met_floatingLabel="normal"
            android:numeric="decimal"
            android:layout_weight="1"

            />


    </LinearLayout>



    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_save"
        android:background="@color/primary_gray_dark"
        android:layout_alignParentBottom="true"
        app:rippleSpeed="50"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/two_button_layout"
        android:visibility="gone"
        android:orientation="horizontal">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:background="@color/primary_gray_dark"
            android:layout_weight="1"
            app:rippleSpeed="50"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/edit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:background="@color/primary_gray_dark"
            android:layout_weight="1"
            app:rippleSpeed="50"/>


    </LinearLayout>





</RelativeLayout>
